--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "LogiTrackDb": "Server=(localdb)\\mssqllocaldb;Database=LogiTrackDb;Trusted_Connection=True;"
+  },
+  "Jwt": {
+    "Key": "sikkerhedsnyckel_1234567890987654321",
+    "Issuer": "LogiTrack",
+    "Audience": "LogiTrackUsers"
   }
 }
